--- a/style.css
+++ b/style.css
@@ -11,9 +11,8 @@
 
 .showcase {
   position: absolute;
-  left: 0;
+  right: 0;
   width: 100%;
-
   min-height: 100vh;
   padding: 100px;
   display: flex;
@@ -21,8 +20,12 @@
   align-items: center;
   background-image: linear-gradient(to bottom right, black, silver);
   color: white;
-
+  z-index: 2;
   transition: 0.3s;
+}
+
+.showcase.active {
+  right: 300px;
 }
 
 .showcase header {
@@ -58,6 +61,14 @@
   cursor: pointer;
 
   transition: 0.3s;
+}
+
+.toggle.active {
+  background: url(https://i.ibb.co/rt3HybH/close.png);
+  background-repeat: no-repeat;
+  background-size: 25px;
+  background-position: center;
+  cursor: pointer;
 }
 
 .toggle:hover {
@@ -136,5 +147,35 @@
 }
 
 .socialLinks li a:hover {
+  transform: scale(1.3);
+}
+
+.menu {
+  /* background: #111; */
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu ul {
+  position: relative;
+  list-style: none;
+}
+
+.menu ul li a {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 2rem;
+  color: black;
+  transition: 0.5s;
+}
+
+.menu ul li a:hover {
+  color: rgb(116, 116, 116);
   transform: scale(1.3);
 }
