--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@
   transition: 0.3s;
 }
 
+.showcase.site {
+  background-image: none;
+  background: #111;
+}
+
 .showcase.active {
   right: 300px;
 }
@@ -176,6 +181,7 @@
 }
 
 .menu ul li a:hover {
-  color: rgb(116, 116, 116);
-  transform: scale(1.3);
+  text-decoration: underline;
+  color: rgb(69, 69, 69);
+  transform: scale(1.15);
 }
