--- a/site.css
+++ b/site.css
@@ -1,6 +1,92 @@
-.beginningsText {
-  position: relative;
-  color: red;
-  border: 2px solid red;
+.showcase.site {
+  position: absolute;
+  width: 100%;
+  min-height: 100vh;
+  padding: 150px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  background: #111;
+  color: white;
   z-index: 2;
+  transition: 0.3s;
+}
+
+.showcase.site .text {
+  padding: 0px 100px;
+}
+
+/* -- TEXT BODY AREA FOR THIS PAGE --  */
+
+.beginningsText {
+  top: 450px;
+  position: absolute;
+  color: white;
+  /* border: 2px solid red; */
+  z-index: 2;
+  background: #111;
+}
+
+.chapter {
+  font-size: 3em;
+  position: relative;
+  top: 0;
+  left: 8%;
+  padding-top: 60px;
+}
+
+.youtube {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.youtube iframe {
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
+.beginningsText p {
+  padding: 0 80px 20px;
+  font-size: 1.2em;
+}
+
+.chapter span {
+  color: grey;
+  font-size: 0.5em;
+  font-weight: 200;
+}
+
+.tech-stack {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.tech-stack img {
+  height: 400px;
+}
+
+.divider {
+  height: 0.7px;
+  background: #fff;
+  background: -webkit-linear-gradient(
+    left,
+    rgb(255, 255, 255) 0%,
+    rgb(50, 50, 50) 50%,
+    rgb(255, 255, 255) 100%
+  );
+}
+
+.divider.light {
+  z-index: 2;
+  background: #fff;
+  background: -webkit-linear-gradient(
+    left,
+    rgb(90, 90, 90) 0%,
+    rgb(255, 255, 255) 50%,
+    rgb(90, 90, 90) 100%
+  );
 }
