--- a/site.css
+++ b/site.css
@@ -19,12 +19,17 @@
 /* -- TEXT BODY AREA FOR THIS PAGE --  */
 
 .beginningsText {
+  width: 100%;
   top: 450px;
   position: absolute;
   color: white;
-  /* border: 2px solid red; */
   z-index: 2;
   background: #111;
+  padding-bottom: 400px;
+}
+
+.beginningsText.active {
+  right: 300px;
 }
 
 .chapter {
@@ -33,6 +38,7 @@
   top: 0;
   left: 8%;
   padding-top: 60px;
+  transition: 0.3s;
 }
 
 .youtube {
